--- a/src/Sass/_variables.scss
+++ b/src/Sass/_variables.scss
@@ -5,8 +5,11 @@ $primary: #2ACFCF;
 $primaryDark: #3B3054;
 $secondary: #F46262;
 //Neutral
+$white: #f8f8ff;
 $gray:#BFBFBF;
 $grayViolet:#9E9AA7;
 $darkBlue: #35323E;
 $darkViolet: #232127;
 
+//borders
+$borderRad1: 12px;
