--- a/src/Sass/app.scss
+++ b/src/Sass/app.scss
@@ -2,3 +2,5 @@
 @import './elements';
 @import './components/header.scss';
 @import './components/app.scss';
+@import './components//navbar.scss';
+@import './components/signupbtn.scss';
