--- a/src/Sass/components/header.scss
+++ b/src/Sass/components/header.scss
@@ -1,6 +1,10 @@
 
 header{
-    background:$secondary;
+    // background:$secondary;
     width:100%;
     top:0;
+    display:flex;
+    padding: 0.8em;
+    font-weight: 700;
+    
 }
