--- a/src/Sass/components/header.scss
+++ b/src/Sass/components/header.scss
@@ -3,7 +3,7 @@ header{
     // background:$secondary;
     width:100%;
     top:0;
-    padding: 0.8em;
+    padding: 1rem 0;
     font-weight: 700;
     
 }
