--- a/src/Sass/components/navbar.scss
+++ b/src/Sass/components/navbar.scss
@@ -1,7 +1,57 @@
 nav.top-nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    a {
+        color:$grayViolet;
+    }
+
+    .logo{
+        color:$darkViolet;
+        margin-right: 1.2em;
+    }
+
+    .left-side {
+        display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
+        flex:0 0 38%;
+
+        .left-side-links {
+            display: flex;
+            flex:0 0 300px;
+            justify-content: space-between;
+        }
+    }
+
+    .right-side {
+        display: flex;
+        flex:0 0 190px;
+        
+        .right-side-links {
+            display: flex;
+            flex: 0 1 190px;
+            justify-content:space-between;
+            align-items: center;
+            
+        }
+
+        .right-btn {
+            background: $primary;
+            color:$white;
+            font-size: 1rem;
+            font-weight: 700;
+            border:none;
+            border-radius:20px;
+            width:100px;
+            padding: 6px;
+        }
+    }
+
 }
+
+
 
 
 
