--- a/src/Sass/components/app.scss
+++ b/src/Sass/components/app.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   margin:0 auto;
-  padding-top: 0;
+  padding: 0 1.2em;
   max-width: 1440px;
   min-width: 375px;
 
